# Image-Preprocessing

./: .gitignore  README.md  colors.py  commons.py  enhance.py  img_type.py  main.py  morphology.py  noises.py  pyproject.toml  rfft2_approx_butterworth.py  rfft2_butterworth.py  rfft2_filters.py  rfft2_gaussian.py  ruff.toml  seg.py  spatial_filters.py  stats.py  transformations.py
Interface/: color_dialog.py  editting_dialog.py  file_dialog.py  frequency_dialog.py  image_object.py  interface.py  main.py  mainwindow.py  spatial_dialog.py
src/: colors.py  enhance.py  morphology.py  noises.py  seg.py  transformations.py
src/GUI/: color_dialog.py  editting_dialog.py  file_dialog.py  frequency_dialog.py  image_object.py  interface.py  mainwindow.py  spatial_dialog.py
src/filters/: rfft2_butterworth.py  rfft2_filters.py  rfft2_gaussian.py  spatial_filters.py
src/utils/: helpers.py  img_type.py  specials.py  stats.py
