[project]
name = "image-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "johnny95731",email = "johnny95731@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2,<3.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "qdarkstyle (>=3.2.3,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyfftw (>=0.15.0,<0.16.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "cython (>=3.1.2,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
    "numexpr (>=2.11.0,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas = "^2.3.1"

